plugins {
    id 'java'
}

group 'me.cocolennon'
version '1.3.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    mavenLocal()

    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.glaremasters.me/repository/towny/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT'
    compileOnly 'com.palmergames.bukkit.towny:towny:0.103.0.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

setLibsDirName('./builds')
